# rubber-duck

./: .gitignore  README.md  diy-copilot.ipynb  docker-compose.yaml  main.py  project_paths.py  pyproject.toml
document_store/: queries.py  store.py
indexing_pipeline/: cache_checker.py  file_writer.py  link_content_fetcher.py  web_scrapping.py
indexing_pipleline/: file_content_reader.py  indexing_pipeline.py  weaviate_writer.py
query_pipeline/: query_pipeline.py  weaviate_retriever.py
scraping_pipeline/: file_writer.py  web_scrapping.py
