[project]
name = "rubber-duck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastembed-haystack>=1.4.1",
    "haystack-ai>=2.9.0",
    "ollama>=0.4.7",
    "trafilatura>=2.0.0",
    "weaviate-haystack>=4.0.2",
]
